# thoughtful_ai_support_agent

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  deploy_repl.zsh  docker-compose.yaml  predefined_data.json  pyproject.toml  pyrightconfig.json  setup.sh
scripts/: deploy_k8s.zsh  deploy_repl.zsh  run_all.zsh
src/: chatbot.py  config.py  data_loader.py  response_handler.py  ui.py
tests/: test_chatbot.py  test_data_loader.py  test_e2e.py  test_response_handler.py
